--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # GDAL bindings
 #GDAL>=3.2.2    #TODO: causes conflicts
+pyshp>=2.1.3
 
 # PyTorch
 --find-links https://download.pytorch.org/whl/torch_stable.html
