--- a/projects/solarPanels/configs/base_solarPanels.yaml
+++ b/projects/solarPanels/configs/base_solarPanels.yaml
@@ -1,10 +1,20 @@
 VERSION: 2
-DATASET:
+DATALOADER:
+  ASPECT_RATIO_GROUPING: false
+  FILTER_EMPTY_ANNOTATIONS: false
+DATASETS:
   NAME: "solar_panels"
   DATA_ROOT: "/data/datasets/INTELLO/solarPanels"
+SOLVER:
+  BASE_LR: 0.00001
+  IMS_PER_BATCH: 1
 OUTPUT_DIR: "cnn_states/solarPanels"
 MODEL:
   WEIGHTS: "detectron2://ImageNetPretrained/MSRA/R-50.pkl"
   MASK_ON: True
   RESNETS:
     DEPTH: 50
+  ROI_HEADS:
+    NUM_CLASSES: 4
+INPUT:
+  NUM_INPUT_CHANNELS: 4
