--- a/projects/solarPanels/configs/base_solarPanels.yaml
+++ b/projects/solarPanels/configs/base_solarPanels.yaml
@@ -15,6 +15,8 @@ MODEL:
   RESNETS:
     DEPTH: 50
   ROI_HEADS:
-    NUM_CLASSES: 4
+    NUM_CLASSES: 3
 INPUT:
   NUM_INPUT_CHANNELS: 4
+  NORMALISATION: 65535
+  IMAGE_SIZE: [800, 600]
