--- a/projects/solarPanels/configs/base_solarPanels.yaml
+++ b/projects/solarPanels/configs/base_solarPanels.yaml
@@ -8,6 +8,10 @@ DATASETS:
 SOLVER:
   BASE_LR: 0.001
   IMS_PER_BATCH: 2
+  STEPS:
+  - 5000
+  - 15000
+  - 30000
 OUTPUT_DIR: "cnn_states/solarPanels"
 MODEL:
   WEIGHTS: "detectron2://ImageNetPretrained/MSRA/R-50.pkl"
@@ -16,6 +20,7 @@ MODEL:
     DEPTH: 50
   ROI_HEADS:
     NUM_CLASSES: 3
+  REPLACE_BATCH_NORM: true
 INPUT:
   NUM_INPUT_CHANNELS: 4
   NORMALISATION: 65535
