--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ shapely>=1.7.1
 OWSLib>=0.24.1
 
 tqdm>=4.60.0
+opencv-python>=4.5.2.54
 
 # PyTorch
 --find-links https://download.pytorch.org/whl/torch_stable.html
