added ref. CT dataset; bug ﬁxes

--- a/projects/solarPanels/configs/base_solarPanels.yaml
+++ b/projects/solarPanels/configs/base_solarPanels.yaml
@@ -20,10 +20,22 @@ MODEL:
     DEPTH: 50
   ROI_HEADS:
     NUM_CLASSES: 1
-  REPLACE_BATCH_NORM: true
+  REPLACE_BATCH_NORM: false
+  PIXEL_MEAN:
+    - 97.32908
+    - 103.76076
+    - 102.778725
+    - 2.510275
+    - 110.10215
+  PIXEL_STD:
+    - 35.45578
+    - 32.37561
+    - 31.029196
+    - 5.7908273
+    - 4.883663
 INPUT:
   NUM_INPUT_CHANNELS: 5
-  NORMALISATION: 255
+  NORMALISATION: 1
   IMAGE_SIZE: [224, 224]
 AUGMENTATION:
   - NAME: "RandomBrightness"
