--- a/projects/channelIslandCT/configs/base.yaml
+++ b/projects/channelIslandCT/configs/base.yaml
@@ -3,32 +3,32 @@ DATALOADER:
   ASPECT_RATIO_GROUPING: false
   FILTER_EMPTY_ANNOTATIONS: false
 DATASETS:
-  NAME: "solar_panels_pretrain"
-  DATA_ROOT: "/data/datasets/INTELLO/solarPanels_aux/patch_datasets/224x224"
+  NAME: "channelIslandCT"
+  DATA_ROOT: "/data/datasets/INTELLO/channelIslandCT"
 SOLVER:
-  BASE_LR: 0.001
+  BASE_LR: 0.01
   IMS_PER_BATCH: 2
   STEPS:
   - 5000
   - 15000
   - 30000
-OUTPUT_DIR: "cnn_states/solarPanels_pretrain"
+OUTPUT_DIR: "cnn_states/channelIslandCT"
 MODEL:
   WEIGHTS: "detectron2://ImageNetPretrained/MSRA/R-50.pkl"
   MASK_ON: True
   RESNETS:
     DEPTH: 50
   ROI_HEADS:
-    NUM_CLASSES: 1
+    NUM_CLASSES: 6
   REPLACE_BATCH_NORM: false
   PIXEL_MEAN:
-    - 125.100006
-    - 129.38504
-    - 119.02527
+  - 77.14670184158587
+  - 80.10308534203995
+  - 78.91256477749215
   PIXEL_STD:
-    - 43.796257
-    - 36.04708
-    - 30.787947
+  - 77.14670184158587
+  - 80.10308534203995
+  - 78.91256477749215
 INPUT:
   NUM_INPUT_CHANNELS: 3
   NORMALISATION: 1
@@ -42,11 +42,6 @@ AUGMENTATION:
     KWARGS:
       intensity_min: 0.8
       intensity_max: 1.2
-  - NAME: "RandomFlip"
-    KWARGS:
-      prob: 0.5
-      horizontal: 0
-      vertical: 1
   - NAME: "RandomFlip"
     KWARGS:
       prob: 0.5
