--- a/projects/channelIslandCT/configs/frcnn_r50.yaml
+++ b/projects/channelIslandCT/configs/frcnn_r50.yaml
@@ -1,17 +1,17 @@
-_BASE_: base_solarPanels_pretrain.yaml
+_BASE_: base.yaml
 SOLVER:
   BASE_LR: 0.01
-  IMS_PER_BATCH: 1
+  IMS_PER_BATCH: 2
   STEPS:
-  - 40000
-  - 80000
-  MAX_ITER: 200000
-OUTPUT_DIR: "cnn_states/solarPanels/pretrain/frcnn_r50"
+  - 5000
+  - 15000
+  - 30000
+OUTPUT_DIR: "cnn_states/channelIslandCT/frcnn_r50"
 MODEL:
   WEIGHTS: "detectron2://ImageNetPretrained/MSRA/R-50.pkl"
   MASK_ON: False
   RESNETS:
     DEPTH: 50
   ROI_HEADS:
-    NUM_CLASSES: 1
+    NUM_CLASSES: 6
   REPLACE_BATCH_NORM: False
