--- a/projects/solarPanels/configs/maskrcnn_r50.yaml
+++ b/projects/solarPanels/configs/maskrcnn_r50.yaml
@@ -1,11 +1,10 @@
 _BASE_: base_solarPanels.yaml
 SOLVER:
-  BASE_LR: 0.001
-  IMS_PER_BATCH: 2
+  BASE_LR: 0.01
+  IMS_PER_BATCH: 1
   STEPS:
-  - 5000
-  - 15000
-  - 30000
+  - 80000
+  MAX_ITER: 500000
 OUTPUT_DIR: "cnn_states/solarPanels/maskrcnn_r50"
 MODEL:
   WEIGHTS: "detectron2://ImageNetPretrained/MSRA/R-50.pkl"
@@ -14,4 +13,4 @@ MODEL:
     DEPTH: 50
   ROI_HEADS:
     NUM_CLASSES: 1
-  REPLACE_BATCH_NORM: true
+  REPLACE_BATCH_NORM: False
