impl. geospatial inference script

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ torchvision==0.8.2+cu110    #0.9.1+cu111
 # Detectron2
 --find-links https://dl.fbaipublicfiles.com/detectron2/wheels/cu110/torch1.7/index.html # https://dl.fbaipublicfiles.com/detectron2/wheels/cu111/torch1.8/index.html
 detectron2
+
+# converting masks to polygons
+imantics
