[WIP] added V2 dataset

--- a/projects/solarPanels/configs/old_labels_v1/base_solarPanels_slopeAspect_ir_800x600.yaml
+++ b/projects/solarPanels/configs/old_labels_v1/base_solarPanels_slopeAspect_ir_800x600.yaml
@@ -21,24 +21,8 @@ MODEL:
   ROI_HEADS:
     NUM_CLASSES: 1
   REPLACE_BATCH_NORM: false
-  PIXEL_MEAN:
-    - 96.9273
-    - 104.4484
-    - 101.004616
-    - 142.92957
-    - 3.4425015
-    - 103.78881
-    - 0.82806164
-    - 33.16804
-  PIXEL_STD:
-    - 36.83215
-    - 32.63338
-    - 31.445467
-    - 33.528797
-    - 9.908506
-    - 13.854324
-    - 6.645638
-    - 48.270504
+  PIXEL_MEAN: [97.66963, 104.40458, 100.80986, 143.27992, 3.4355621, 112.70877, 0.7324577, 33.560642]
+  PIXEL_STD: [36.103374, 31.923462, 30.820448, 32.04759, 9.596312, 17.102655, 6.382594, 48.46958]
 INPUT:
   NUM_INPUT_CHANNELS: 8
   NORMALISATION: 1
