--- a/projects/solarPanels/configs/old_labels_v1/unet.yaml
+++ b/projects/solarPanels/configs/old_labels_v1/unet.yaml
@@ -1,14 +1,13 @@
-_BASE_: base_solarPanels_v2.yaml
+_BASE_: base_solarPanels.yaml
 SOLVER:
   BASE_LR: 0.001
   IMS_PER_BATCH: 2
   STEPS:
   - 80000
   MAX_ITER: 500000
-OUTPUT_DIR: "cnn_states/solarPanels/v2/unet"
+OUTPUT_DIR: "cnn_states/solarPanels/unet"
 MODEL:
   META_ARCHITECTURE: "UNet"
-  WEIGHTS: ""
   DEPTH: 5
   NUM_FEATURES_EXPONENT: 6
   BATCH_NORM: false
